--- a/exercises/LaTeX/Ex2_2.tex
+++ b/exercises/LaTeX/Ex2_2.tex
@@ -8,6 +8,36 @@
 \begin{document}
 
 \maketitle
+\section{Exercise 1}
+Consider a Poisson process $X$, on the unit square, with intensity function $\rho(x,y)=400y$. 
+Calculate the mean number of points.\\
+Which of the following point patterns could reasonably be a simulation of $X$. 
+Which Poisson processes could the others be coming from?
+
+\section{Exercise 2}
+An insurance agent is trying to estimate the number of car accidents paid
+by the insurance company during a given year. Let $t\in [0,12)$ denote
+time during the year and assume an inhomogeneous Poisson process of
+car accidents on this interval with intensity function
+\[
+\rho(t)=
+\begin{cases}
+    \alpha, \quad if\  t<3\  \text{or}\ t\geq 10\\
+    \beta, \quad if\  3\leq t < 10,
+\end{cases}
+\]
+where $\alpha > \beta$ due to the possibility of slippery roads.
+\begin{enumerate}
+    \item Using this model, find the mean number of car accidents in the Spring 
+
+    
+
+\end{enumerate}
+
+
+
+
+
 
 
 
