--- a/exercises/LaTeX/Ex2_2.tex
+++ b/exercises/LaTeX/Ex2_2.tex
@@ -89,7 +89,7 @@ Thus;
 \exp(-20)\approx 2.06\times10^{-9},
 \]
 close to zero.
-\subsection*{(C)}
+\subsection*{(c)}
 Algorithm for simulating this Poisson process:
 We simulate an inhomogeneous Poisson process on the interval $[0,12)$ with intensity function  
 \[
