--- a/exercises/LaTeX/Ex8_8.tex
+++ b/exercises/LaTeX/Ex8_8.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{bbm}
-\usepackage{geometry}
+\usepackage{geometry, graphicx}
 
 \begin{document}
 
@@ -24,7 +24,7 @@ where \( N(x) \) represents the point process at location \( x \), and \( \mathb
 By the definition of the non-reduced Campbell measure, we have:
 
 \[
-\int_{\mathbb{R}^d \times \mathcal{N}} 1\{ x \in A, N \in \Gamma \} \, dC(x \times N) = \int_A P_x(\Gamma) \, dM(x),
+\int_{\mathbb{R}^d \times \mathcal{N}} \mathbbm{1}\{ x \in A, N \in \Gamma \} \, dC(x \times N) = \int_A P_x(\Gamma) \, dM(x),
 \]
 where \( P_x(\Gamma) \) is the Palm distribution, which gives the probability that a point at location \( x \) has a mark in \( \Gamma \), and \( M(x) \) is the mean measure (or intensity measure) of the point process. 
 
@@ -73,6 +73,13 @@ Thus, the probability that the distance from \( x \) to its nearest neighbour is
 \mathbb{P}_x(R^*(x, X) > r) = \exp\left(-M(B_x(r))\right),
 \]
 which completes the proof.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\textwidth]{conditioned_realisation.pdf}
+    \caption{Examples for Exercises.}
+\end{figure}
+
 
 
 \end{document}
